--- a/src/App.css
+++ b/src/App.css
@@ -187,3 +187,102 @@ section.nf-modal.active .modal-box {
   padding: 6px 12px;
   margin: 0 10px;
 }
+select,
+option {
+  border: none;
+  outline: none;
+  /* background-color: transparent; */
+  /* color: red; */
+}
+.lang_option img {
+  width: 30px;
+  height: 20px;
+}
+.css-b62m3t-container {
+  width: 120px;
+  color: #000000;
+}
+/* 
+.header_btns_group.unordered_list_end select,
+.header_btns_group.unordered_list_end select option {
+  border-radius: 0px;
+} 
+*/
+/* .header_btns_group.unordered_list_end select { */
+/* width: 150px; */
+/* height: 30px; */
+/* } */
+/* select option[value="az"] {
+  background-image: url('resim1.jpg');
+} */
+/* header select option[value="en"] {
+  background-image: url('/public/images/flag/Flag_of_the_United_Kingdom.svg.png');
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-left: 20px;
+  margin-left: 20px;
+  -webkit-appearance: none; 
+  -moz-appearance: none; 
+  appearance: none;
+}
+header select option[value="az"] {
+  background-image: url('/public/images/flag/Flag_of_the_United_Kingdom.svg.png');
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-left: 20px;
+  margin-left: 20px;
+  -webkit-appearance: none; 
+  -moz-appearance: none; 
+  appearance: none;
+}
+header select option[value="uk"] {
+  background-image: url('/public/images/flag/Flag_of_the_United_Kingdom.svg.png');
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-left: 20px;
+  margin-left: 20px;
+  -webkit-appearance: none; 
+  -moz-appearance: none; 
+  appearance: none;
+}
+header select option[value="tr"] {
+  background-image: url('/public/images/flag/Flag_of_the_United_Kingdom.svg.png');
+  background-size: 20px;
+  background-repeat: no-repeat;
+  background-position: center;
+  padding-left: 20px;
+  margin-left: 20px;
+  -webkit-appearance: none; 
+  -moz-appearance: none; 
+  appearance: none;
+} */
+/* select option[value="tr"] {
+  background-image: url('resim3.jpg');
+} */
+/* select option[value="uk"] {
+  background-image: url('resim3.jpg');
+} */
+.mdp-float {
+  display: none;
+}
+.css-7crn4c-singleValue div {
+  /* line-height: 20px; */
+  display: flex;
+  gap: 2px;
+  /* justify-content: space-between; */
+  align-items: center;
+}
+.css-7crn4c-singleValue img {
+  width: 25px;
+  height: 20px;
+  object-fit: cover;
+}
+.css-1fdsijx-ValueContainer {
+  padding: 2px 0 !important;
+}
+.css-qbdosj-Input input {
+  display: none;
+}
